# fsh-server

./: MANIFEST.in  README.rst  setup.cfg  setup.py
Angular10Crud/: README.md  package-lock.json  package.json
Angular10Crud/src/app/: app-routing.module.ts  app.component.html  app.module.ts
Angular10Crud/src/app/components/snippet-list/: snippet-list.component.html  snippet-list.component.ts
Angular10Crud/src/app/services/: snippet.service.ts
fsh/: __init__.py  asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
fsh/apps/snippet/: admin.py  models.py  serializers.py  urls.py  views.py
fsh/apps/snippet/migrations/: 0001_initial.py  0002_auto_20200729_1558.py  0003_snippetofday.py
fsh/settings/: __init__.py  production.py
fsh/static/: main.js  main.js.map  polyfills.js  styles.js
fsh/templates/: base.html  base_form.html  index.html
fsh/templates/fsh/: login.html  password.html
fsh/templates/rest_framework/: api.html
src/api/: serializers.py  urls.py  views.py
src/fsh/: __init__.py  __main__.py  asgi.py  context_processors.py  settings.py  urls.py
src/fsh/static/: main.js  main.js.map  polyfills.js  styles.js
src/fsh/static/css/: basic.css
src/fsh/templates/: base.html  base_card.html  base_delete.html  index.html
src/fsh/templates/includes/: pagination.html
src/fsh/templates/rest_framework/: api.html
src/snippet/: models.py  urls.py  views.py
src/snippet/migrations/: 0001_initial.py  0002_snippet_language.py  0003_snippetcomment_snippetlike.py  0004_auto_20200726_0926.py  0005_auto_20200727_1207.py
src/snippet/templates/snippet/: index.html  snippet_create.html  snippet_detail.html  snippet_list.html
