[metadata]
name = fsh
description = ...
url = ...
author = axju
author_email = axel.juraske@short-report.de
license = MIT
long_description = file: README.rst
long_description_content_type = text/plain
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[tox:tox]
envlist =
    py{35,36,37,38,39}-django{,-postgres,-mysql}
    py{35,36,37}-django{20,21,22}{,-postgres,-mysql}
    py{36,37,38,39}-django{30,master}{,-postgres,-mysql}
    flake8
    pylint
    cov-report
skipt_missing_interpreters = True

[testenv]
setenv =
    COVERAGE_FILE = .coverage.{envname}
deps =
    coverage
    django: Django
    django20: Django>=2.0,<2.1
    django21: Django>=2.1,<2.2
    django22: Django>=2.2,<3.0
    django30: Django>=3.0,<3.1
    djangomaster: https://github.com/django/django/archive/master.tar.gz
    postgres: psycopg2-binary
    mysql: mysqlclient
commands =
    python -m pip install -e .
    coverage run --source=fsh -m fsh test snippet

[testenv:flake8]
deps = flake8
commands = flake8 src

[testenv:pylint]
deps = pylint
commands = pylint --rcfile=setup.cfg src

[testenv:cov-report]
skipsdist = True
setenv =
    COVERAGE_FILE = .coverage
deps = coverage
commands =
    coverage combine
    coverage report --fail-under=50

[flake8]
ignore = E701, E722
max-line-length = 160
exclude = *migrations*, *tests.py

[pylint]
disable =
  missing-docstring,
  invalid-name, no-member,
  too-few-public-methods,
  too-many-ancestors,
  too-many-arguments,
  attribute-defined-outside-init,
  protected-access,
  arguments-differ,
  R0801,

  # todo: fix this errors
  dangerous-default-value,
  multiple-statements,
  no-self-use,
  unused-argument,
  bare-except,
  broad-except
max-line-length = 160
ignore = migrations, tests.py
